# indoor-position-tracker

./: .gitignore  LICENSE  docker-compose.yml  epicos_projeto_indoor.md
.claude/skills/esp-idf-cli/: SKILL.md
.claude/skills/esp-idf-expert/: SKILL.md
.claude/skills/esp-idf-expert/evals/: evals.json
anchor/firmware/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
anchor/firmware/main/: CMakeLists.txt  anchor_config.env.example  anchor_config.h  anchor_config_A1.h  anchor_config_A2.h  anchor_config_A3.h  app_main.c  ble_scan.c  ble_scan.h  idf_component.yml  led_status.c  led_status.h  ota_update.c  ota_update.h  wifi_mqtt.c  wifi_mqtt.h
anchor/specs/001-mvp/: plan.md  spec.md
docker/mqtt/: mosquitto.conf
docker/mqtt/client/: Dockerfile
tag/firmware/: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults
tag/firmware/main/: CMakeLists.txt  app_main.c  ble_adv.c  ble_adv.h  led_status.c  led_status.h  nvs_log.c  nvs_log.h  ota_update.c  ota_update.h  tag_config.h
tag/specs/001-mvp/: plan.md  spec.md  validacao.md
